# ai-native-hackathon-2

./: .gitignore
.claude/skills/skill-creator/: SKILL.md
.claude/skills/uv-project-manager/: CHANGELOG.md  README.md  SKILL.md
.specify/memory/: constitution.md
console-todo-app/: README.md  pyproject.toml
console-todo-app/src/console_todo_app/: __init__.py  __main__.py  main.py
console-todo-app/src/console_todo_app/models/: task.py
console-todo-app/src/console_todo_app/storage/: task_storage.py
console-todo-app/src/console_todo_app/ui/: console_ui.py  rich_components.py  theme.py
console-todo-app/tests/: test_console_ui.py  test_main.py  test_rich_components.py  test_task.py  test_task_storage.py  test_theme.py
history/prompts/1-phase-1-todo-app/: 001-phase-i-todo-app-specification.spec.prompt.md  002-clarify-todo-app-specification.spec.prompt.md  003-plan-phase-i-todo-app-implementation.plan.prompt.md  004-validate-implementation-plan-quality.plan.prompt.md  005-generate-atomic-task-breakdown.tasks.prompt.md  006-phase-i-implementation-execution.green.prompt.md
history/prompts/2-enhance-rich-ui/: 001-rich-ui-enhancement-specification.spec.prompt.md  002-clarify-rich-ui-implementation-details.spec.prompt.md  003-plan-rich-ui-integration-implementation.plan.prompt.md  004-generate-atomic-task-breakdown.tasks.prompt.md
history/prompts/constitution/: 001-console-todo-app-constitution.constitution.prompt.md  (+1 more)
specs/1-phase-1-todo-app/: plan.md  spec.md  tasks.md
specs/2-enhance-rich-ui/: plan.md  spec.md  tasks.md
(+12 files in other folders)
