[project]
name = "console-todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moosa Afzal", email = "moosaafzal2002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
console-todo-app = "console_todo_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
